bugfix: fixed sticky scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,7 @@
 body {
   margin: 0;
 }
+
+* {
+  touch-action: auto !important;
+}
